--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <lombok.version>1.18.24</lombok.version>
         <feign.version>12.0</feign.version>
         <log4j.version>2.19.0</log4j.version>
+        <junit.version>5.9.1</junit.version>
     </properties>
 
     <dependencyManagement>
@@ -62,6 +63,14 @@
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-core</artifactId>
                 <version>${log4j.version}</version>
+            </dependency>
+
+            <!-- Tests -->
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-engine</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
