--- a/.github/workflows/maven_pr.yml
+++ b/.github/workflows/maven_pr.yml
@@ -1,4 +1,4 @@
-name: Java CI with Maven
+name: CI - BrasilAPI Integration
 
 on:
   pull_request:
@@ -21,6 +21,3 @@ jobs:
 
     - name: Build
       run: mvn clean install -DskipTests -Ddependency-check.skip=true -Dfindbugs.skip=true -Dfindbugs.skip=true
-
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
