--- a/.github/workflows/develop_tag.yml
+++ b/.github/workflows/develop_tag.yml
@@ -4,13 +4,30 @@ on:
     branches: [ 'develop' ]
 
 jobs:
-  create-tag:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set Version Project
-        run: echo "VERSION_PROJECT=$(echo $(mvn help:evaluate -Dexpression=project.version -q -DforceStdout))" >> $GITHUB_ENV
-      - uses: rickstaa/action-create-tag@v1
-        with:
-          tag: echo $VERSION_PROJECT_BUILD-$GITHUB_RUN_NUMBER
-          message: "Create Tag"
+    - uses: actions/checkout@v3
+    - name: Set up JDK 8
+      uses: actions/setup-java@v3
+      with:
+        java-version: '8'
+        distribution: 'temurin'
+        cache: maven
+
+    - name: Build
+      run: sh etc/script/build.sh
+
+    - name: Set Version Project
+      run: echo "VERSION_PROJECT=$(echo $(mvn help:evaluate -Dexpression=project.version -q -DforceStdout))" >> $GITHUB_ENV
+    - name: Set Name Tag
+      run: echo "NAME_TAG=$(echo BrasilAPI_${{ env.VERSION_PROJECT }})" >> $GITHUB_ENV
+  
+    - uses: meeDamian/github-release@2.0
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        tag: ${{ env.NAME_TAG }}
+        name: Create Tab - ${{ env.NAME_TAG }}
+        gzip: folders
+        files: BrasilAPIIntegration_JARs:deploy/
+        allow_override: true
