--- a/feign/pom.xml
+++ b/feign/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>BrasilApiIntegration</artifactId>
         <groupId>br.com.sawcunha</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -54,6 +54,7 @@
     </dependencies>
 
     <build>
+        <finalName>BrasilAPIIntegrationFeign</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
